--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ chardet==3.0.4
 click==7.1.2
 Flask==1.1.2
 gast==0.2.2
+gensim==3.4.0
 gevent==20.5.0
 google-auth==1.14.3
 google-auth-oauthlib==0.4.1
@@ -24,6 +25,7 @@ Keras-Applications==1.0.8
 Keras-Preprocessing==1.1.2
 Markdown==3.2.2
 MarkupSafe==1.1.1
+nltk==3.2.5
 numpy==1.18.4
 oauthlib==3.1.0
 opt-einsum==3.2.1
@@ -32,6 +34,7 @@ protobuf==3.12.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 PyYAML==5.3.1
+random==3.6.7
 requests==2.23.0
 requests-oauthlib==1.3.0
 rsa==4.0
@@ -41,6 +44,7 @@ tensorboard==1.14.0
 tensorflow==1.14.0
 tensorflow-estimator==1.14.0
 termcolor==1.1.0
+textblob==0.8.4
 urllib3==1.25.9
 Werkzeug==1.0.1
 wrapt==1.12.1
