--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ chardet==3.0.4
 click==7.1.2
 Flask==1.1.2
 gast==0.2.2
+gensim==2.1.0
 gevent==20.5.0
 google-auth==1.14.3
 google-auth-oauthlib==0.4.1
@@ -18,11 +19,13 @@ idna==2.9
 importlib-metadata==1.6.0
 itsdangerous==1.1.0
 Jinja2==2.11.2
+joblib==0.14.1
 Keras==2.2.5
 Keras-Applications==1.0.8
 Keras-Preprocessing==1.1.2
 Markdown==3.2.2
 MarkupSafe==1.1.1
+nltk==3.3
 numpy==1.18.4
 oauthlib==3.1.0
 opt-einsum==3.2.1
